--- a/configs/ma35d1_defconfig
+++ b/configs/ma35d1_defconfig
@@ -17,6 +17,7 @@ CONFIG_CMD_BOOTEFI_SELFTEST=y
 CONFIG_CMD_MMC=y
 CONFIG_CMD_MTD=y
 CONFIG_CMD_PART=y
+# CONFIG_CMD_NAND is not set
 # CONFIG_CMD_POWEROFF is not set
 CONFIG_CMD_USB=y
 # CONFIG_CMD_NFS is not set
