FIX: remove CONFIG_CMD_NAND

--- a/configs/ma35d1_sdcard0_defconfig
+++ b/configs/ma35d1_sdcard0_defconfig
@@ -19,6 +19,7 @@ CONFIG_CMD_BOOTEFI_HELLO=y
 CONFIG_CMD_BOOTEFI_SELFTEST=y
 CONFIG_CMD_MMC=y
 CONFIG_CMD_MTD=y
+# CONFIG_CMD_NAND is not set
 # CONFIG_CMD_POWEROFF is not set
 CONFIG_CMD_USB=y
 # CONFIG_CMD_NFS is not set
