FEAT: disable display

--- a/arch/arm/dts/ma35d1-sdcard0.dts
+++ b/arch/arm/dts/ma35d1-sdcard0.dts
@@ -43,7 +43,7 @@
 };
 
 &display {
-	status = "okay";
+	status = "disabled";
 	//RGB interface
 	// swizzle = <2>;//0:ARGB, 1:RGBA, 2:ABGR, 3:BGRA
 	swizzle = <0>;
