--- a/arch/arm/dts/ma35d1-spinor.dts
+++ b/arch/arm/dts/ma35d1-spinor.dts
@@ -44,7 +44,7 @@
 };
 
 &display {
-	status = "okay";
+	status = "disabled";
 	//RGB interface
 	swizzle = <0>;//0:ARGB, 1:RGBA, 2:ABGR, 3:BGRA
 	pixel-fmt = <6>;//RGB888
