--- a/arch/arm/mach-nuvoton/Makefile
+++ b/arch/arm/mach-nuvoton/Makefile
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier:	GPL-2.0
 
+obj-$(CONFIG_LMA35) += lma35/
 obj-$(CONFIG_MA35D1) += ma35d1/
 obj-$(CONFIG_MA35H0) += ma35h0/
 obj-$(CONFIG_MA35D0) += ma35d0/
