--- a/drivers/reset/Kconfig
+++ b/drivers/reset/Kconfig
@@ -148,6 +148,15 @@ config RESET_IMX7
 	help
 	  Support for reset controller on i.MX7/8 SoCs.
 
+config RESET_LMA35
+        select REGMAP
+        select SYSCON
+        bool "MA35D1 Reset Driver"
+        depends on DM_RESET && LMA35
+        default y
+        help
+          Support for reset controller on LMA35 SoC
+
 config RESET_MA35D1
 	select REGMAP
 	select SYSCON
