FEAT:Support network function

--- a/configs/myd_lma35_defconfig
+++ b/configs/myd_lma35_defconfig
@@ -86,3 +86,9 @@ CONFIG_USB_STORAGE=y
 CONFIG_WDT=y
 CONFIG_WDT_MA35D1=y
 # CONFIG_UBIFS_SILENCE_MSG is not set
+CONFIG_PHY_GIGE=y
+CONFIG_DWC_ETH_QOS=y
+CONFIG_MII=y
+CONFIG_NET_RANDOM_ETHADDR=y
+CONFIG_CMD_RANDOM=y
+CONFIG_CMD_GPIO=y
