--- a/configs/myd_lma35_sdcard1_defconfig
+++ b/configs/myd_lma35_sdcard1_defconfig
@@ -77,3 +77,9 @@ CONFIG_DM_VIDEO=y
 CONFIG_MA35D1_LCD=y
 CONFIG_WDT=y
 CONFIG_WDT_MA35D1=y
+CONFIG_PHY_GIGE=y
+CONFIG_DWC_ETH_QOS=y
+CONFIG_MII=y
+CONFIG_NET_RANDOM_ETHADDR=y
+CONFIG_CMD_RANDOM=y
+CONFIG_CMD_GPIO=y
