FEAT:Add redundand env in defconfig

--- a/configs/myd_lma35_defconfig
+++ b/configs/myd_lma35_defconfig
@@ -92,3 +92,6 @@ CONFIG_MII=y
 CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_CMD_RANDOM=y
 CONFIG_CMD_GPIO=y
+CONFIG_SYS_REDUNDAND_ENVIRONMENT=y
+CONFIG_ENV_OFFSET_REDUND=0x48000
+CONFIG_ENV_SIZE=0x8000
